Added python stuff: pip, virtualenv and pipenv.

--- a/playbooks/roles/installing_apps/defaults/main.yml
+++ b/playbooks/roles/installing_apps/defaults/main.yml
@@ -7,10 +7,15 @@ apps_arch:
   - flake8
   - base-devel
   - python2
+  - python2-pip
+  - python2-virtualenv
   - python
+  - python-pip
+  - python-virtualenv
   - ipython2
   - ipython
   - diff-so-fancy  # Only available in Arch as a package. Manual installatino on other distros is required
+  - python-pipenv  # Only available in Arch as a package. Manual installatino on other distros is required
 
 apps_ubuntu_1804:
   - git
@@ -20,6 +25,10 @@ apps_ubuntu_1804:
   - flake8
   - build-essential
   - python
+  - python-pip
+  - python-virtualenv
   - python3
+  - python3-pip
+  - python3-virtualenv
   - ipython
   - ipython3
