--- a/playbooks/roles/installing_apps/tasks/ubuntu_1804.yml
+++ b/playbooks/roles/installing_apps/tasks/ubuntu_1804.yml
@@ -12,3 +12,8 @@
     url: https://raw.githubusercontent.com/so-fancy/diff-so-fancy/master/third_party/build_fatpack/diff-so-fancy
     dest: /usr/local/bin/diff-so-fancy
     mode: 0755
+
+- name: Install pipenv
+  pip:
+    name: pipenv
+    executable: pip3
