--- a/playbooks/roles/configuring_apps/tasks/git.yml
+++ b/playbooks/roles/configuring_apps/tasks/git.yml
@@ -1,3 +1,3 @@
 ---
 - name: Configure git to use diff-so-fancy
-  shell: "/bin/bash {{ dotfiles_repo_path }}/git/enable_diff_so_fancy.sh"
+  shell: "cp -f {{ dotfiles_repo_path }}/git/HOME/.gitconfig $HOME/"
