--- a/playbooks/roles/installing_apps/defaults/main.yml
+++ b/playbooks/roles/installing_apps/defaults/main.yml
@@ -16,7 +16,7 @@ apps_arch:
   - ipython
   - diff-so-fancy  # Only available in Arch as a package. Manual installatino on other distros is required
   - python-pipenv  # Only available in Arch as a package. Manual installatino on other distros is required
-  - docker
+  - docker  # Require manual installation on Ubuntu to get the latest version (docker-ce)
 
 apps_ubuntu_1804:
   - git
