--- a/playbooks/roles/installing_apps/tasks/main.yml
+++ b/playbooks/roles/installing_apps/tasks/main.yml
@@ -23,3 +23,6 @@
     dest: "~/.bash-git-prompt"
     repo: https://github.com/magicmonty/bash-git-prompt.git
     depth: 1
+
+- name: Installing pyenv
+  include_tasks: install_pyenv.yml
