Configure pyenv to install required Python versions.
- Add configurable variable: "python_versions" to specify required
  Python versions to be installed.

- Move development environment related packages from OS level Python
  installation to each Python installeb by pyenv.

--- a/playbooks/roles/configuring_apps/tasks/main.yml
+++ b/playbooks/roles/configuring_apps/tasks/main.yml
@@ -13,3 +13,9 @@
     - flake8.yml
     - git.yml
     - tmux.yml
+
+- name: Configure pyenv
+  include_tasks: pyenv.yml
+  loop: "{{ query('list', python_versions)|flatten }}"
+  loop_control:
+    loop_var: python_version
