Update test env to hosts.yml

--- a/hosts.yml
+++ b/hosts.yml
@@ -5,13 +5,16 @@ all:
       ansible_port: 2222
       ansible_host: 127.0.0.1
       ansible_user: vagrant
-      ansible_ssh_private_key_file: ~/vagrant-boxes/archlinux/.vagrant/machines/default/virtualbox/private_key
-      env_has_x11: yes
-      env_user: john
+      ansible_ssh_private_key_file: ~/vagrant-boxes/arch/.vagrant/machines/default/virtualbox/private_key 
+      env_has_x11: no
+      env_user: vagrant
     test-ubuntu-1804-vagrant:
       ansible_port: 2200
       ansible_host: 127.0.0.1
       ansible_user: vagrant
-      ansible_ssh_private_key_file: ~/vagrant-boxes/ubuntu-1804/.vagrant/machines/default/virtualbox/private_key
+      ansible_ssh_private_key_file: ~/vagrant-boxes/ubuntu_1804/.vagrant/machines/default/virtualbox/private_key
+      ansible_python_interpreter: /usr/bin/python3
       env_has_x11: no
-      env_user: john
+      env_user: vagrant
+      python_versions:
+        - 3.7.2
