Use "flattened" plugin for query instead of using filter.

--- a/playbooks/roles/configuring_apps/tasks/main.yml
+++ b/playbooks/roles/configuring_apps/tasks/main.yml
@@ -16,6 +16,6 @@
 
 - name: Configure pyenv
   include_tasks: pyenv.yml
-  loop: "{{ query('list', python_versions)|flatten }}"
+  loop: "{{ query('flattened', python_versions) }}"
   loop_control:
     loop_var: python_version
