Fix copy-paste error name

--- a/playbooks/roles/installing_apps/tasks/install_bd.yml
+++ b/playbooks/roles/installing_apps/tasks/install_bd.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install vim-plug
+- name: Install bd
   get_url:
     url: https://raw.githubusercontent.com/vigneshwaranr/bd/master/bd
     dest: "$HOME/.local/bin/bd"
