Added local execution tips to hosts.yml and README

--- a/hosts.yml
+++ b/hosts.yml
@@ -18,3 +18,7 @@ all:
       env_user: vagrant
       python_versions:
         - 3.7.2
+    local:
+      ansible_connection: local
+      env_has_x11: yes
+      env_user: john
