Installing bd: Ensure /home/johnliu/.local/bin/ exists

--- a/playbooks/roles/installing_apps/tasks/install_bd.yml
+++ b/playbooks/roles/installing_apps/tasks/install_bd.yml
@@ -1,4 +1,11 @@
 ---
+
+- name: Ensure ~/.local/bin/ eixsts
+  become_user: "{{ env_user }}"
+  file:
+    path: "$HOME/.local/bin"
+    state: directory
+
 - name: Install bd
   become_user: "{{ env_user }}"
   get_url:
