--- a/playbooks/roles/installing_apps/tasks/install_pyenv.yml
+++ b/playbooks/roles/installing_apps/tasks/install_pyenv.yml
@@ -1,23 +1,24 @@
 ---
-- name: Pull latest pyenv from GitHub
+- name: Check if pyenv was installed not via pacman
+  # In an older version of this playbook, pyenv was installed via git,
+  # not pacman.
   become_user: "{{ env_user }}"
-  git:
-    dest: "~/.pyenv"
-    repo: https://github.com/pyenv/pyenv.git
-    depth: 1
+  shell: "ls ~/.pyenv/ && ! pacman -Qs pyenv"
+  register: pyenv_not_via_pacman
+  ignore_errors: yes
 
-- name: Install pyenv prerequisites for Arch
+- name: Remove pyenv which is not installed by pacman
+  become_user: "{{ env_user }}"
+  when: pyenv_not_via_pacman is succeeded
+  file:
+    path: "~/.pyenv/"
+    state: absent
+
+- name: Install pyenv and build dependencies
   pacman:
     name:
+      - pyenv
       - base-devel
       - openssl
       - zlib
-      - bzip2
-      - readline
-      - sqlite
-      - wget
-      - curl
-      - llvm
       - xz
-      - tk
-      - libffi
