--- a/playbooks/roles/installing_apps/tasks/archlinux.yml
+++ b/playbooks/roles/installing_apps/tasks/archlinux.yml
@@ -6,4 +6,9 @@
 - name: Install applications for Archlinux
   pacman:
     name: "{{ apps_arch }}"
-    
+
+- name: Ensure .bashrc.d exists
+  become_user: "{{ env_user }}"
+  file:
+    path: "~/.bashrc.d"
+    state: directory
