--- a/playbooks/roles/installing_apps/tasks/install_fzf.yml
+++ b/playbooks/roles/installing_apps/tasks/install_fzf.yml
@@ -9,3 +9,11 @@
 - name: Install fzf
   become_user: "{{ env_user }}"
   shell: "~/.fzf/install --xdg --key-bindings --completion --no-update-rc --no-zsh --no-fish"
+
+- name: Enable fzf
+  become_user: "{{ env_user }}"
+  copy:
+    dest: "~/.bashrc.d/fzf.bash"
+    content: |
+      [ -f "${XDG_CONFIG_HOME:-$HOME/.config}"/fzf/fzf.bash ] && source "${XDG_CONFIG_HOME:-$HOME/.config}"/fzf/fzf.bash
+
