Move docker installation into "install_docker.yml"

--- a/playbooks/roles/installing_apps/tasks/install_docker.yml
+++ b/playbooks/roles/installing_apps/tasks/install_docker.yml
@@ -1,4 +1,8 @@
 ---
+- name: Install docker via pacman
+  pacman:
+    name: docker
+
 - name: Start and enable docker.service
   service:
     name: docker
