Install python language server

--- a/playbooks/roles/installing_apps/defaults/main.yml
+++ b/playbooks/roles/installing_apps/defaults/main.yml
@@ -10,6 +10,7 @@ apps_arch:
   - python2-virtualenv
   - python
   - python-virtualenv
+  - python-language-server
   - ipython2
   - ipython
   - colordiff
