--- a/playbooks/roles/installing_apps/tasks/install_pyenv.yml
+++ b/playbooks/roles/installing_apps/tasks/install_pyenv.yml
@@ -29,5 +29,6 @@
     dest: "~/.bashrc.d/pyenv.bash"
     content: |
       if command -v pyenv 1>/dev/null 2>&1; then
+          eval "$(pyenv init --path)"
           eval "$(pyenv init -)"
       fi
