Fix tmux default term and install make

--- a/playbooks/roles/terminal_env/files/tmux/.tmux.conf
+++ b/playbooks/roles/terminal_env/files/tmux/.tmux.conf
@@ -25,7 +25,7 @@ setw -g pane-base-index 1
 set -g history-limit 10000
 
 # List of plugins
-# Don't forget to install tpm: https://github.com/tmux-plugins/tpm 
+# Don't forget to install tpm: https://github.com/tmux-plugins/tpm
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-yank'
 set -g @plugin 'tmux-plugins/tmux-copycat'
@@ -40,7 +40,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 # Style Settings #
 ##################
 # Enable True Color support
-set-option -g default-terminal "tmux-256color"
+set-option -g default-terminal "screen-256color"
 # For every external TERM, enable Truecolor functionality
 set-option -ga terminal-overrides ",*:Tc"
 #
