--- a/playbooks/roles/python_dev/tasks/main.yml
+++ b/playbooks/roles/python_dev/tasks/main.yml
@@ -24,6 +24,7 @@
     - tk-devel
     - libffi-devel
     - sqlite3-devel
+    - make
 
 - name: Enable pyenv for env user
   become_user: "{{ env_user }}"
