Move neovim stuff to roles/neovim

--- a/playbooks/roles/neovim/tasks/main.yml
+++ b/playbooks/roles/neovim/tasks/main.yml
@@ -26,5 +26,5 @@
     src: "nvim/"
     dest: "~/.config/nvim/"
 
-- name: Installing plugins by vim-plug using PlugInstall command
-  shell: "nvim -u $HOME/.config/nvim/init-plug.vim -c PlugInstall -c qa"
+- name: Installing plugins by vim-plug
+  shell: "nvim -u $HOME/.config/nvim/init-plug.vim -c PlugClean! -c PlugInstall -c qa"
